--- a/example.html
+++ b/example.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Example</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <style>
       .btn{
         color:black;
@@ -14,7 +16,7 @@
       }
     </style>
 </head>
-<body>
+<body style="height:2400px">
     <div class="container">
         <h1>My First Bootstrap Page</h1>
         <p>This is some text.</p> 
@@ -112,6 +114,71 @@
         <button type="button" class="btn btn-dark">Dark</button>
         <button type="button" class="btn btn-light">Light</button>
         <button type="button" class="btn btn-link">Link</button>      
-      </div>
+        </div>
+        <div class="container">
+        <h2>Example heading <span class="badge ">New</span></h2>
+        <h3>Example heading <span class="badge badge-pill badge-warning">New</span></h3>
+        </div>
+        <div class="progress" style="height:20px;">
+          <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" style="width:75%;">75%</div>
+          <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" style="width:20%">20%</div>
+        </div>
+        <ul class="pagination pagination-sm" style="float:right;">
+          <li class="page-item active"><a class="page-link" href="#">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+        </ul>
+        <button type="button" class="btn btn-primary">
+          Messages <span class="badge badge-light">4</span>
+        </button>
+        <button type="button" class="btn btn-danger">
+          Notification <span class="badge badge-warning">7</span>
+        </button>
+        <ul class="breadcrumb" style="width:500px;">
+          <li class="breadcrumb-item"><a href="#">Photos</a></li>
+          <li class="breadcrumb-item"><a href="#">Summer 2017</a></li>
+          <li class="breadcrumb-item"><a href="#">Italy</a></li>
+          <li class="breadcrumb-item active">Rome</li>
+        </ul>
+        <div class="list-group">
+        <a href="#" class="list-group-item list-group-item disabled">First item</a>
+        <a href="#" class="list-group-item list-group-item-warning ">Second item</a>
+        <a href="#" class="list-group-item list-group-item-action active">Third item</a>
+        </div>
+        <div class="card" style="width:400px">
+        <img class="card-img-top" src="avatar.png" alt="Card image">
+        <div class="card-img-overlay">
+        <div class="card-body">
+          <h4 class="card-title">John Doe</h4>
+          <p class="card-text">Some example text.</p>
+        </div>
+        </div>
+        </div>
+        <div class="dropdown">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+              Dropdown button
+            </button>
+            <div class="dropdown-menu">
+                <h5 class="dropdown-header">Dropdown header</h5>
+                <a class="dropdown-item disabled" href="#">Link 1</a>
+                <a class="dropdown-item" href="#">Link 2</a>
+                <a class="dropdown-item active" href="#">Link 3</a>
+                <div class="dropdown-divider"></div>
+                <h5 class="dropdown-header">Dropdown header</h5>
+                <a class="dropdown-item" href="#">Another link</a>
+            </div>
+        </div>
+        <div class="btn-group">
+                <button type="button" class="btn btn-primary">Sony</button>
+                <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
+                  <span class="caret"></span>
+                </button>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">Tablet</a>
+                  <a class="dropdown-item" href="#">Smartphone</a>
+                </div>
+            </div>
 </body>
 </html>
