--- a/example.html
+++ b/example.html
@@ -180,5 +180,208 @@
                   <a class="dropdown-item" href="#">Smartphone</a>
                 </div>
             </div>
-</body>
+            <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#demo">Simple collapsible</button>
+            <div id="demo" class="collapse show">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </div>
+<div id="accordion">
+<div class="card">
+<div class="card-header">
+<a class="card-link" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+Collapsible Group Item #1
+</a>
+</div>
+<div id="collapseOne" class="collapse">
+<div class="card-body">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+</div>
+</div>
+</div>
+</div>
+<ul class="nav nav-tabs">
+<li class="nav-item">
+<a class="nav-link" href="#">Active</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="#">Link</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="#">Link</a>
+</li>
+<li class="nav-item">
+<a class="nav-link disabled" href="#">Disabled</a>
+</li>
+</ul>
+<ul class="nav nav-pills">
+<li class="nav-item">
+<a class="nav-link active" href="#">Active</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="#">Link</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="#">Link</a>
+</li>
+<li class="nav-item">
+<a class="nav-link disabled" href="#">Disabled</a>
+</li>
+</ul>
+<p>Justified pill:</p>
+<ul class="nav nav-pills nav-justified">
+<li class="nav-item">
+    <a class="nav-link active" href="#">Active</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link disabled" href="#">Disabled</a>
+</li>
+</ul><br>
+
+<p>Justified tabs:</p>
+<ul class="nav nav-tabs nav-justified">
+<li class="nav-item">
+    <a class="nav-link active" href="#">Active</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link disabled" href="#">Disabled</a>
+</li>
+</ul>
+<ul class="nav nav-tabs">
+    <li class="nav-item">
+        <a class="nav-link active" href="#">Active</a>
+    </li>
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Dropdown</a>
+        <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Link 1</a>
+        <a class="dropdown-item" href="#">Link 2</a>
+        <a class="dropdown-item" href="#">Link 3</a></div>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+    </li>
+    </ul>
+    <ul class="nav nav-pills">
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Active</a>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Dropdown</a>
+            <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Link 1</a>
+            <a class="dropdown-item" href="#">Link 2</a>
+            <a class="dropdown-item" href="#">Link 3</a></div>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+        </ul>
+        <nav class="navbar navbar-expand-sm bg-primary navbar-light">
+            <ul class="navbar-nav">
+                <a class="navbar-brand" href="#">Logo</a>
+                <li class="nav-item active">
+                <a class="nav-link" href="#">Active</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+                <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                          Dropdown link
+                        </a>
+                        <div class="dropdown-menu">
+                          <a class="dropdown-item" href="#">Link 1</a>
+                          <a class="dropdown-item" href="#">Link 2</a>
+                          <a class="dropdown-item" href="#">Link 3</a>
+                        </div>
+                      </li>
+            </ul>
+            <span class="navbar-text">
+                    Navbar text
+                  </span>
+            </nav>
+            <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+                    <form class="form-inline" action="/action_page.php">
+                      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                      <button class="btn btn-success" type="submit">Search</button>
+                    </form>
+                  </nav>
+                  <div class="container">
+                        <h2>Stacked form</h2>
+                        <form class="form-inline" action="/action_page.php">
+                          <div class="form-group">
+                            <label for="email">Email:</label>
+                            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                          </div>
+                          <div class="form-group">
+                            <label for="pwd">Password:</label>
+                            <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
+                          </div>
+                          <div class="form-check">
+                            <label class="form-check-label">
+                              <input class="form-check-input" type="checkbox" name="remember"> Remember me
+                            </label>
+                          </div>
+                          <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
+                        <div class="form-group">
+                                <label for="comment">Comment:</label>
+                                <textarea class="form-control" rows="5" id="comment"></textarea>
+                              </div>
+                              <div class="form-check  form-check-inline">
+                                    <label class="form-check-label">
+                                      <input type="checkbox" class="form-check-input" value="">Option 1
+                                    </label>
+                                  </div>
+                                  <div class="form-check form-check-inline">
+                                    <label class="form-check-label">
+                                      <input type="checkbox" class="form-check-input" value="">Option 2
+                                    </label>
+                                  </div>
+                                  <div class="form-check form-check-inline disabled">
+                                    <label class="form-check-label">
+                                      <input type="checkbox" class="form-check-input" value="" disabled>Option 3
+                                    </label>
+                                  </div>
+                                  <div class="radio">
+                                        <label class="radio-inline"><input type="radio" name="optradio">Option 1</label>
+                                        <label class="radio-inline"><input type="radio" name="optradio">Option 2</label>
+                                        <label class="radio-inline"><input type="radio" name="optradio" disabled>Option 3</label>
+                                      </div>
+                                      <div class="form-group">
+                                            <label for="sel1">Select list:</label>
+                                            <select class="form-control" id="sel1">
+                                              <option>1</option>
+                                              <option>2</option>
+                                              <option>3</option>
+                                              <option>4</option>
+                                            </select>
+                                          </div>
+                      </div>
+    </body>
 </html>
